[package]
name = "bno055"
description = "Bosch Sensortec BNO055 9-axis IMU driver"
version = "0.3.1"
authors = ["Eugene P. <eupn@protonmail.com>", "Henrik B. <hargonix@gmail.com>"]
repository = "https://github.com/eupn/bno055"
edition = "2018"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "bno055",
]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
byteorder = { version = "1", default-features = false }
mint = "^0.5.4"
bitflags = "1"

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]
