[package]
name = "bno055"
description = "Bosch Sensortec BNO055 9-axis IMU driver"
version = "0.3.3" # Remember to update lib.rs
authors = ["Eugene P. <eupn@protonmail.com>", "Henrik B. <hargonix@gmail.com>"]
repository = "https://github.com/eupn/bno055"
edition = "2018"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "bno055",
]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
byteorder = { version = "1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
mint = "^0.5.4"
bitflags = "1"
num-traits = "0.2.15"
num-derive = "0.3.3"

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]

[features]
default = []
std = []

[dev-dependencies]
linux-embedded-hal = "0.3"
