[package]
name = "bno055"
description = "Bosch Sensortec BNO055 9-axis IMU driver"
version = "0.3.3" # Remember to update lib.rs
authors = ["Eugene P. <eupn@protonmail.com>", "Henrik B. <hargonix@gmail.com>"]
repository = "https://github.com/eupn/bno055"
edition = "2018"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "bno055",
]
license-file = "LICENSE"
readme = "README.md"

# linux-embedded-hal requires 1.65 because of nix
rust-version = "1.65"

[dependencies]
byteorder = { version = "1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
mint = "^0.5.4"
bitflags = "2"
num-traits = { version = "0.2.15", default-features = false, features = ["libm"] }
num-derive = "0.4.1"

defmt = { version = "0.3", optional = true }

embedded-hal = { version = "1.0" }

[features]
default = []
std = []

defmt-03 = ["dep:defmt", "embedded-hal/defmt-03"]
serde = ["dep:serde", "mint/serde"]

[dev-dependencies]
linux-embedded-hal = "0.4"
